fix: better alignment in character selection

--- a/src/EsiCharacterSelection/EsiCharacterSelection.module.css
+++ b/src/EsiCharacterSelection/EsiCharacterSelection.module.css
@@ -6,6 +6,7 @@
     background-color: #1d1d1d;
     color: #c5c5c5;
     height: 24px;
+    padding-left: 5px;
     width: calc(100% - 20px);
 }
 
